--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </p>
         <p id="author">— Marie Curie</p>
       </div>
+      <div class="tags">
+        <p id="tag">Wisdom</p>
+      </div>
       <div class="buttons">
         <button id="copy" onclick="copy()">
           Copy
